Fixes scrolling behavior (and double scroll bars) in most dropdowns:
The NS dropdown will is not well behaved when there are many NSs.

--- a/frontend/public/components/RBAC/_rbac.scss
+++ b/frontend/public/components/RBAC/_rbac.scss
@@ -92,9 +92,7 @@
       top: 14px;
     }
     .dropdown-menu {
-      max-height: 190px;
       width: 400px;
-      overflow-y: scroll;
     }
   }
 
